--- a/movie-database/src/components/AddMovieForm/AddMovieForm.module.css
+++ b/movie-database/src/components/AddMovieForm/AddMovieForm.module.css
@@ -1,29 +1,29 @@
 /* Small Screen */
 .container {
-  margin: 5rem 1rem;
+  margin: 1rem;
   padding: 1rem;
 }
 
-.form {
+.form{
   display: flex;
   flex-direction: column;
 }
 
-.form__left {
-  display: none;
-}
-
-.form__image {
-  max-width: 100%;
-  border-radius: 25px;
-  height: auto;
-}
-
-.form__title {
-  text-align: center;
-  color: #4361ee;
-  font-size: 2.44rem;
+.form__left{
   margin-bottom: 1rem;
+}
+
+.form__image{
+  max-width: 100%;
+  height: auto;
+  border-radius: 25px;
+}
+
+.form__title{
+  color: #1B263B;
+  margin-bottom: 1rem;
+  font-size: 2.44rem;
+  text-align: center;
 }
 
 .form__group {
@@ -58,25 +58,28 @@
   width: 100%;
 }
 
+
 /* Large Screen */
 @media (min-width: 992px) {
   .container {
-    max-width: 1200px;
-    margin: 5rem auto;
+      max-width: 1200px;
+      margin: 5rem auto;
   }
 
   .form {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
   }
 
-  .form__left {
-    display: block;
-    flex-basis: 60%;
+  .form__left{
+      display: block;
+      flex-basis: 60%;
+  }
+  
+  .form__right{
+      flex-basis: 40%;
   }
 
-  .form__right {
-    flex-basis: 40%;
-  }
+  
 }
